<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/framelayoutgeneral">

    <TextView
        android:id="@+id/exoplayer_null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="No Video is Available"
        android:textStyle="bold"
        android:layout_marginLeft="135dp"
        android:visibility="gone"
        android:elevation="10dp"/>

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/exoplayer_view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        />



    <TextView
        android:id="@+id/step_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="200dp"
        android:text="Step name"
        android:layout_marginLeft="150dp"/>

    <ImageView
        android:id="@+id/thumbnail_imageview"
        android:layout_width="83dp"
        android:layout_height="47dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="Helllooooooooooo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="230dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="Previous Step"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="Next Step"/>

    </LinearLayout>

</FrameLayout>